Week 7 update 3
