# swagger.json
@@ -220,13 +220,16 @@
     "/user/": {
       "get": {
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -244,6 +247,12 @@
                 },
                 "password": {
                   "example": "any"
+                },
+                "profession": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
                 }
               }
             }
@@ -252,9 +261,6 @@
         "responses": {
           "201": {
             "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -265,6 +271,9 @@
     "/user/{username}": {
       "get": {
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "username",
@@ -277,8 +286,8 @@
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
